--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -22,12 +22,13 @@
 
     <ImageView
         android:id="@+id/event_back"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         app:srcCompat="@drawable/ic_back"
         android:focusable="true"
         android:clickable="true"
-        android:layout_margin="24dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -51,10 +52,9 @@
         android:layout_height="wrap_content"
         android:text="@string/event"
         android:textColor="#fff"
-        android:textSize="40sp"
+        android:textSize="32sp"
         android:textAllCaps="true"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="22dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"/>
+        app:layout_constraintGuide_percent="0.11"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/event_guideline2"
