--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -98,20 +98,22 @@
         app:layout_constraintGuide_percent="0.8"/>
 
     <com.google.android.material.button.MaterialButton
-    android:id="@+id/forgot_verify"
-    style="@style/Widget.MaterialComponents.Button"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="150dp"
-    android:layout_marginEnd="30dp"
-    android:fontFamily="@font/acme"
-    android:text="Verify"
-    android:textAppearance="@style/Widget.MaterialComponents.Button"
-    android:textColor="@color/colorWhite"
-    android:textSize="30sp"
-    app:cornerRadius="30dp"
-    app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
-    app:rippleColor="#5d65ff" />
+        android:id="@+id/forgot_verify"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nova_round"
+        android:paddingStart="35dp"
+        android:paddingEnd="35dp"
+        android:text="Verify"
+        android:textAppearance="@style/Widget.MaterialComponents.Button"
+        android:textColor="@color/colorWhite"
+        android:textSize="30sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
+        app:rippleColor="#5d65ff" />
 
 
 
