--- a/app/src/main/res/drawable/event_register_bg.xml
+++ b/app/src/main/res/drawable/event_register_bg.xml
@@ -9,7 +9,11 @@
     <corners android:radius="24dp"/>
 
     <stroke
-        android:color="@color/colorWhite"
-        android:width="1dp"/>
+        android:color="#882222"
+        android:width="0.5dp"/>
+
+    <gradient
+        android:startColor="#bb1111"
+        android:endColor="#bb5511"/>
 
 </shape>
