--- a/app/src/main/res/layout/activity_sponsors.xml
+++ b/app/src/main/res/layout/activity_sponsors.xml
@@ -84,15 +84,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="75dp"
-        android:alpha="0.4"
         android:background="@color/transparent"
         app:layout_constraintTop_toTopOf="@+id/toolbar"
         app:tabBackground="@color/transparent"
         app:tabIndicatorColor="@color/colorWhite"
+        app:tabSelectedTextColor="@color/colorWhite"
         app:tabIndicatorHeight="2dp"
         app:tabMode="scrollable"
         app:tabRippleColor="@color/black"
-        app:tabTextColor="@color/colorWhite"
+        app:tabTextColor="#f6ffffff"
         app:tabUnboundedRipple="true" />
 
     <androidx.viewpager.widget.ViewPager
