--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.EventFragment"
     android:background="@color/transparent"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    tools:context=".fragments.EventFragment">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/event_image_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.12" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/event_detail_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.38" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.54" />
+        app:layout_constraintGuide_percent="0.45" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -27,37 +41,20 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/event_bg"
-        android:focusable="true"/>
+        android:focusable="true"
+        android:src="@drawable/event_bg" />
 
     <ImageView
         android:id="@+id/eventfrag_back"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        app:srcCompat="@drawable/ic_back"
-        android:focusable="true"
-        android:clickable="true"
         android:layout_margin="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <Button
-        android:id="@+id/event_register_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/event_register_bg"
-        android:text="Register"
-        android:textSize="18sp"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintHorizontal_bias="0.9"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:focusable="true"
         android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/event_image_guide"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:srcCompat="@drawable/ic_back" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,119 +64,26 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/event_bghills"
             android:layout_marginLeft="-40dp"
             android:layout_marginRight="-40dp"
-            android:layout_marginBottom="-5dp" />
+            android:layout_marginBottom="-5dp"
+            app:srcCompat="@drawable/event_bghills" />
 
     </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/event_image_guide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.12" />
 
     <com.nitrr.ecell.esummit.ecellapp.misc.SquareImageView
         android:id="@+id/event_img"
         android:layout_width="150dp"
         android:layout_height="0dp"
-        android:padding="10dp"
-        android:layout_margin="10dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_event_bq"
-        app:layout_constraintTop_toBottomOf="@id/event_image_guide"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/event_detail_guide"
-        android:background="@color/black_overlay"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/event_detail_guide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.38" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/venue_card"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/colorWhite"
-        android:elevation="1dp"
-        app:layout_constraintTop_toTopOf="@id/venue_layout"
-        app:layout_constraintBottom_toBottomOf="@+id/venue_layout"
-        app:layout_constraintLeft_toLeftOf="@id/venue_layout"
-        app:layout_constraintRight_toRightOf="@id/venue_layout"
-        app:cardCornerRadius="5dp"/>
-
-    <LinearLayout
-        android:id="@+id/venue_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_margin="10dp"
+        android:background="@color/black_overlay"
         android:padding="10dp"
-        android:elevation="2dp"
-        app:layout_constraintTop_toBottomOf="@id/event_detail_guide"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/event_detail_guide"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline1">
-
-        <TextView
-            android:id="@+id/date_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:autoSizeTextType="uniform"
-            android:fontFamily="@font/roboto"
-            android:maxLines="1"
-            android:text="Date: 2019-07-29 | Time: 10:00am"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_centerHorizontal="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto"
-                    android:text="Venue: "
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_placeholder"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"/>
-
-                <TextView
-                    android:id="@+id/event_venue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:text="TBD"
-                    android:ellipsize="end"
-                    android:textAllCaps="true"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/event_image_guide"
+        app:srcCompat="@drawable/ic_event_bq" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -191,24 +95,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline1">
 
-        <ScrollView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:overScrollMode="never">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/event_text"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/event_tab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:fontFamily="@font/roboto"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="8dp"
+                app:tabBackground="@color/transparent"
+                app:tabIndicatorHeight="2dp"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="#882222"
+                app:tabTextColor="@color/colorLightBlack"
+                app:tabRippleColor="@color/colorLightBlack"
+                app:tabUnboundedRipple="false" />
 
-        </ScrollView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/black_overlay"
+                app:layout_constraintTop_toBottomOf="@id/event_tab" />
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/event_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/event_tab" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.cardview.widget.CardView>
 
