--- a/app/src/main/res/layout/alert_dialog_privacy_policy.xml
+++ b/app/src/main/res/layout/alert_dialog_privacy_policy.xml
@@ -11,35 +11,22 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/alert_privacy_text"
-            android:orientation="vertical">
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="240dp">
-
-                <TextView
-                    android:id="@+id/alert_privacy_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_margin="8dp"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:scrollbars="vertical"
-                    android:textColor="@android:color/black" />
-
-            </ScrollView>
-        </LinearLayout>
-
         <TextView
+            android:id="@+id/text_privacy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:text="@string/agreement"
-            android:textColor="@android:color/black" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
+            android:clickable="true"
+            android:fontFamily="sans-serif-condensed"
+            android:linksClickable="true"
+            android:text="Sample Text"
+            android:textColor="@color/colorLightBlack"
+            android:textColorLink="@color/colorAccent"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -54,7 +41,8 @@
                 android:background="@drawable/alert_dialog_privacy_button_accept"
                 android:text="Accept"
                 android:textAllCaps="false"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/alert_privacy_decline"
@@ -65,7 +53,8 @@
                 android:background="@drawable/alert_dialog_privacy_button_decline"
                 android:text="Decline"
                 android:textAllCaps="false"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
