--- a/app/src/main/res/layout/bottom_sheet_fragment_bquiz.xml
+++ b/app/src/main/res/layout/bottom_sheet_fragment_bquiz.xml
@@ -1,17 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/bquiz_bottom_sheet"
     android:layout_height="wrap_content"
     android:background="@drawable/bquiz_bottom_sheet_gradiant"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:behavior_hideable="false"
+    app:behavior_peekHeight="0dp"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/bquiz_animation"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
-        android:layout_margin="24dp"
-        android:padding="16dp"
-        app:srcCompat="@drawable/hourglass" />
+        android:layout_margin="16dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_scale="1"
+        app:lottie_rawRes="@raw/loading"
+        app:lottie_speed="1.2" />
 
     <TextView
         android:id="@+id/bquiz_bottom_sheet_message"
@@ -19,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:fontFamily="@font/alegreya_sans_medium"
-        android:text="Kindly wait for sometime."
+        android:text="Loading..."
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="24sp" />
