--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -28,9 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
-        android:src="@drawable/event_bg"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:src="@drawable/event_bg" />
 
     <ImageView
         android:id="@+id/eventfrag_back"
@@ -106,75 +104,72 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/venue_card"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/colorWhite"
-        android:elevation="1dp"
-        app:layout_constraintTop_toTopOf="@id/venue_layout"
-        app:layout_constraintBottom_toBottomOf="@+id/venue_layout"
-        app:layout_constraintLeft_toLeftOf="@id/venue_layout"
-        app:layout_constraintRight_toRightOf="@id/venue_layout"
-        app:cardCornerRadius="5dp"/>
-
-    <LinearLayout
-        android:id="@+id/venue_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp"
+        android:background="@color/colorWhite"
         app:layout_constraintTop_toBottomOf="@id/event_detail_guide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline1">
-
-        <TextView
-            android:id="@+id/date_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:autoSizeTextType="uniform"
-            android:fontFamily="@font/roboto"
-            android:maxLines="1"
-            android:text="Date: 2019-07-29 | Time: 10:00am"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            tools:targetApi="o" />
+        app:layout_constraintBottom_toTopOf="@id/guideline1"
+        app:cardCornerRadius="5dp">
 
         <LinearLayout
+            android:id="@+id/venue_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/roboto"
-                android:text="Venue: "
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-
-            <ImageView
+                android:id="@+id/date_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_placeholder"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:autoSizeTextType="uniform"
+                android:fontFamily="@font/roboto"
+                android:maxLines="1"
+                android:text="Date: 2019-07-29 | Time: 10:00am"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                tools:targetApi="o" />
 
-            <TextView
-                android:id="@+id/event_venue"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
-                android:text="TBD"
-                android:ellipsize="end"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/roboto"
+                    android:text="Venue: "
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_placeholder"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"/>
+
+                <TextView
+                    android:id="@+id/event_venue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto"
+                    android:text="TBD"
+                    android:ellipsize="end"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
