--- a/app/src/main/res/layout/activity_bquiz.xml
+++ b/app/src/main/res/layout/activity_bquiz.xml
@@ -72,17 +72,15 @@
     <TextView
         android:id="@+id/bquiz_leader_board"
         android:layout_width="120dp"
-        android:layout_height="49dp"
+        android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/bquiz_proceed_bg"
         android:fontFamily="@font/bebas_neue"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:text="@string/leaderboard"
         android:textAlignment="center"
+        android:paddingBottom="8dp"
+        android:text="LEADERBOARD"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
