--- a/app/src/main/res/layout/layout_spons_alertdialog.xml
+++ b/app/src/main/res/layout/layout_spons_alertdialog.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/text_spons"
+        android:textAllCaps="true"
         android:textAlignment="center"
         android:ellipsize="end"
         android:textColor="@color/colorWhite"
