--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -12,6 +12,7 @@
         <item>@font/cormorant_semibold</item>
         <item>@font/lato</item>
         <item>@font/lemon</item>
+        <item>@font/merriweather_sans</item>
         <item>@font/montserrat_subrayada</item>
         <item>@font/noto_sans_bold</item>
         <item>@font/nova_round</item>
