--- a/app/src/main/res/layout/fragment_bquiz.xml
+++ b/app/src/main/res/layout/fragment_bquiz.xml
@@ -49,7 +49,7 @@
             android:layout_margin="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bquiz_question_bg"
-            android:fontFamily="@font/bebas_neue"
+            android:fontFamily="@font/merriweather_sans"
             android:padding="8dp"
             android:textColor="@android:color/black"
             android:textSize="20sp"
