--- a/app/src/main/res/drawable/spons_cardbg_1.xml
+++ b/app/src/main/res/drawable/spons_cardbg_1.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#D51F5D"
-        android:endColor="#EE80A6"
+    <gradient
+        android:startColor="#1F37D5"
+        android:endColor="#6BAFF2"
         android:angle="45"/>
     <corners android:radius="7dp"/>
 
