--- a/app/src/main/res/drawable/spons_cardbg_2.xml
+++ b/app/src/main/res/drawable/spons_cardbg_2.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#259586"
-        android:endColor="#5FE9BA"
+        android:startColor="#919191"
+        android:endColor="#cccccc"
         android:angle="45"/>
     <corners android:radius="7dp"/>
-
 </shape>
+    <!--android:startColor="#898c85"-->
+    <!--android:endColor="#d9ddd3"-->
