--- a/app/src/main/res/drawable/spons_cardbg_5.xml
+++ b/app/src/main/res/drawable/spons_cardbg_5.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#1F37D5"
-        android:endColor="#6BAFF2"
+        android:startColor="#259586"
+        android:endColor="#5FE9BA"
         android:angle="45"/>
     <corners android:radius="7dp"/>
 
