--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="none"
+            android:overScrollMode="always"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:scrollbars="none"
+            android:overScrollMode="always"
             app:layout_constraintTop_toBottomOf="@+id/prev_sponors" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
