--- a/app/src/main/res/layout/activity_bquiz.xml
+++ b/app/src/main/res/layout/activity_bquiz.xml
@@ -70,7 +70,7 @@
 
 
     <TextView
-        android:id="@+id/bquiz_leader_board"
+        android:id="@+id/bq_leader_text"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
