--- a/app/src/main/res/layout/layout_speaker_item.xml
+++ b/app/src/main/res/layout/layout_speaker_item.xml
@@ -24,8 +24,7 @@
             android:id="@+id/speaker_item_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,8 +32,9 @@
 
             <ImageView
                 android:id="@+id/speaker_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_gravity="center"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,13 +44,12 @@
                 <TextView
                     android:id="@+id/speaker_name"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     android:textColor="@color/colorLightBlack"
-                    android:textSize="22sp"
+                    android:textSize="18sp"
                     android:text="Speaker Name"
+                    android:ellipsize="end"
                     android:lines="2"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textAlignment="center"/>
@@ -58,8 +57,8 @@
                 <TextView
                     android:id="@+id/speaker_year"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:textSize="18sp"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
                     android:text="Year"
                     android:textColor="@color/colorLightBlack"
                     android:gravity="center"
