--- a/app/src/main/res/layout/fragment_bquiz.xml
+++ b/app/src/main/res/layout/fragment_bquiz.xml
@@ -20,7 +20,7 @@
             android:layout_marginEnd="8dp"
             android:fontFamily="sans-serif-condensed"
             android:padding="8dp"
-            android:text="0sec."
+            android:text="Question coming soon"
             android:textColor="@color/colorWhite"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
